[package]
name = "fanfurybonding"
version = "1.0.0"
authors = ["arnold"]
edition = "2018"
description = "Fanfury Bonding"


exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = { version = "0.14.0" }
cw2 = { version = "0.14.0" }
cw20 = { version = "0.14.0" }
cw20-base = { version = "0.14.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }
cw-storage-plus = { version = "0.14.0" }
schemars = "0.8.3"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
hex = "0.4"
wasmswap = {version = "1.0.0-beta", features = ["library"] }


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-multi-test = {  version = "0.14.0" }
serde_json = "1.0"
#fanfuryswap = {version = "1.0.0", path = "../fanfuryswap", features = ["library"]}